GStreamer: fix format extraction for stepwise frame formats

Pick-to: 6.7 6.5
Fixes: QTBUG-125901
Change-Id: I3af8bb9af72ef86bdd7ae88dd5d9b89bbbdf96e8
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 98b97d08c9bd10927595e40f90264b92b57490bd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>